2001-05-19  Damon Chaplin  <damon@ximian.com>

	* gtkdoc-mktmpl.in (OutputDeclaration): 
	* gtkdoc-mkdb.in (OutputFunction): changed a '?' to a '*' so we accept
	multi-dimensional array function parameters. Patch from Paolo Casarini
	<casarini@CS.UniBO.IT>

2001-05-12  Damon Chaplin  <damon@ximian.com>

	* gtkdoc-scangobj.in: 
	* gtkdoc-scanobj.in: used "*pos = 0" to avoid problems with backslashes
	in '\0'.

	* configure.in: removed dsssl dirs stuff, since we use public entities
	now.

	* gtkdoc-mkdb.in (OutputBook): if there is no main SGML file we create
	it here. Also added a --main-sgml-file option so we know where to put
	it.

	* gtkdoc-scan.in: if there is no MODULE-sections.txt file, we copy
	the MODULE-decl-list.txt file to it. The user can tweak it later.

2001-05-11  Damon Chaplin  <damon@ximian.com>

	* gtk-doc.spec.in: applied patch from Toshio Kuratomi
	<badger@prtr-13.ucsc.edu>.

2001-05-07  Joakim Ziegler  <joakim@ximian.com>

  * gtkdoc-mkdb.in: Added option --outputallsymbols to create a symbol list
    in the module doc dir.

  * gtkdoc-mkdb.in: Added functionality to output a list of undocumented
    symbols in a module, most of is is in OutputMissingDocumentation.

  * gtkdoc-scan.in: Small scanning fixes to facilitate the doc coverage
     output mentioned above.

2001-04-25  Federico Mena Quintero  <federico@ximian.com>

	* gtkdoc-scanobj.in: Added missing output-dir in the call to
	GetOptions().

2001-04-24  Damon Chaplin  <damon@ximian.com>

	* gtkdoc-scanobj.in: copied --outputdir option from gtkdoc-scangobj.in.

Fri Apr 13 15:25:44 2001  Owen Taylor  <otaylor@redhat.com>

	* gtkdoc-mkdb.in: Restore call to OutputBook that was accidentally
	deleted.

Thu Apr 12 17:57:12 2001  Owen Taylor  <otaylor@redhat.com>

	* gtkdoc-scangobj.in: Add a --outputdir option (sort of hacky.
	Need this because $CC, $LD can include relative paths if they
	are based on $LIBTOOL)

2001-03-26  Damon Chaplin  <damon@ximian.com>
